Organiza frontend em pastas e atualiza regras do backend